--- a/resume-0.0/css/main.css
+++ b/resume-0.0/css/main.css
@@ -163,7 +163,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* Backgrounds */
 
 .bg-1{
-  background-image: url('../images/floor.jpg');
+  background-image: url('https://www.facebook.com/iulian.nanu.1?ref=bookmarks');
 }
 
 /* Header */
